# DGM

./: .gitignore  README.md
advection_1d/: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  README.md  documentation.typ  legendre_poly_test.py  main.cpp  output_000000.vtk  output_000001.vtk  output_000002.vtk  output_000003.vtk  output_000004.vtk  output_000005.vtk  output_000006.vtk  output_000007.vtk  output_000008.vtk  output_000009.vtk  output_000010.vtk  output_000011.vtk  output_000012.vtk  output_000013.vtk  output_000014.vtk  output_000015.vtk  output_000016.vtk  output_000017.vtk  output_000018.vtk  output_000019.vtk  output_000020.vtk  output_000021.vtk  output_000022.vtk  output_000023.vtk  output_000024.vtk  output_000025.vtk  output_000026.vtk  output_000027.vtk  output_000028.vtk  output_000029.vtk  output_000030.vtk  (+598 more)
advection_1d/.github/: copilot-code-review-instructions.md  copilot-instructions.md
advection_1d/build_debug/: CMakeCache.txt
advection_1d/debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
advection_1d/debug/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_integration  test_integration[1]_include.cmake  test_integration[1]_tests.cmake  test_mesh[1]_include.cmake  test_mesh[1]_tests.cmake  test_operator[1]_include.cmake  test_operator[1]_tests.cmake  test_reference_element[1]_include.cmake  test_reference_element[1]_tests.cmake
advection_1d/headers/: FieldVector.hpp  IO.hpp  Integrator.hpp  Mesh.hpp  MeshConfig.hpp  NumericalFlux.hpp  Operator.hpp  RK4Integrator.hpp  ReferenceElement.hpp
advection_1d/include/: FieldVector.hpp  IO.hpp  Integrator.hpp  Mesh.hpp  MeshConfig.hpp  NumericalFlux.hpp  Operator.hpp  PadeLegendre.hpp  Postprocessing.hpp  ReferenceElement.hpp  Simulation.h  Traits.h
advection_1d/release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  dg_solver
advection_1d/report/: report.typ  sources.bib
advection_1d/src/: DiffMatrix.hpp  GradJacobiP.hpp  GradVandermonde.hpp  JacobiGLNodes.hpp  JacobiGaussQuadrature.hpp  JacobiP.hpp  MatrixDivision.hpp  Mesh.hpp  MeshConfig.hpp  MeshTNL.hpp  Msh.hpp  NumericalFlux.hpp  Operator.hpp  RK4Integrator.hpp  ReferenceElement.hpp  Vandermonde.hpp  jacobi_gq.hpp  main.cpp  main_tnl.cpp  rk4.hpp  test.cpp
advection_1d/tests/: CMakeLists.txt  test_field_vector.cpp  test_integration.cpp  test_mesh.cpp  test_numerical_flux.cpp  test_operator.cpp  test_pade_legendre.cpp  test_reference_element.cpp
(+213 files in other folders)
